@@ -43,6 +43,12 @@ case "${TYPE}" in
    ;;
 esac
 
+if [ -n "${GATEWAY}" ]; then
+   MSG="The GATEWAY variable cannot be set in ${IFCONFIG} for static routes.\n"
+   log_failure_msg "$MSG Use STATIC_GATEWAY only, cannot continue"
+   exit 1
+fi
+
 if [ -n "${need_ip}" ]; then
    if [ -z "${IP}" ]; then
       log_failure_msg "IP variable missing from ${IFCONFIG}, cannot continue."
@@ -59,11 +65,11 @@ if [ -n "${need_ip}" ]; then
 fi
 
 if [ -n "${need_gateway}" ]; then
-   if [ -z "${GATEWAY}" ]; then
-      log_failure_msg "GATEWAY variable missing from ${IFCONFIG}, cannot continue."
+   if [ -z "${STATIC_GATEWAY}" ]; then
+      log_failure_msg "STATIC_GATEWAY variable missing from ${IFCONFIG}, cannot continue."
       exit 1
    fi
-   args="${args} via ${GATEWAY}"
+   args="${args} via ${STATIC_GATEWAY}"
 fi
 
 if [ -n "${SOURCE}" ]; then
