@@ -39,6 +39,19 @@
       <para>2013-08-02</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Update to linux-3.10.5.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Update to lfs-bootscripts-20130805.  Fixes
+          an issue with ipv4-static-route.</para>
+        </listitem>
+      </itemizedlist>
+    </listitem>
+
+    <listitem>
+      <para>2013-08-02</para>
+      <itemizedlist>
+        <listitem>
           <para>[bdubbs] - Update to util-linux-2.23.2.  Fixes
           <ulink url="&lfs-ticket-root;3386">#3386</ulink>.</para>
         </listitem>
